assets/styles.scss
@font-face {
  font-family: 'SawarabiMincho';
  src: url(/assets/fonts/SawarabiMincho-Regular.ttf);
}

$colors: (
  "primary": #00adb5, // Cyan (kept the same)
  "secondary": #25282c, // Darker Grey
  "tertiary": #aad8d3, // Light Cyan (kept the same)
  "quaternary": #dddddd, // Lighter Grey
  "nature-green": #52de97, // Green (kept the same)
  "nature-brown": #a47c48, // Brown (kept the same)
);

$default-background-color: map-get($colors, "secondary");
$light-theme-background-color: map-get($colors, "quaternary");

html, body {
  padding: 0;
  margin: 0;
  font-family: 'SawarabiMincho';
  font-size: large;
}
.logo {
  max-width: 220px;
  width: 100%;
}

body {
  &.light-theme {
    #container {
      background-color: $light-theme-background-color;
    }
  }

  &:not(.light-theme) {
    #container {
      background-color: $default-background-color;
    }
    a:hover {
      color: map-get($colors, "nature-green");
    }
  }
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.center {
  text-align: center;
}
.small {
  line-height: 0;
  padding: 0;
  font-size: 0.8rem;
}
.text-left {
  text-align: left;
}

#container {
  position: fixed;
  flex-direction: column;
  transition: background-color 0.3s ease;
  background-color: map-get($colors, "secondary");
  color: map-get($colors, "quaternary");
  padding: 1em 1rem;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  overflow-y: auto;
  margin: auto;
}

h1 {
  color: map-get($colors, "primary");
  font-size: 2em;
}

h2 {
  color: map-get($colors, "nature-green");
  font-size: 1.5em;
}

h3 {
  color: map-get($colors, "nature-brown");
  font-size: 1.2em;
}

h4 {
  color: map-get($colors, "primary");
  font-size: 1em;
}

a {
  color: map-get($colors, "primary");
  text-decoration: none;
  transition: color 0.3s;
}

.row {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  max-width: 1200px;
  margin: auto;

  a {
    margin: 0.5rem;
  }
}

.wrap {
  flex-wrap: wrap;
}

.space-between {
  justify-content: space-between;
}
.space-around {
  justify-content: space-around;
}
.text {
  color: inherit;
}
.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  padding: 5rem 0;
  max-width: 540px;
  text-align: center;
}

.card img {
  max-width: 256px;
  @media (max-width: 480px) {
    max-width: 128px;
  }
}

#themeToggle {
  display: none; // Hide the checkbox
  padding: 0;
  margin: 0;

  &:not(:checked) + label #sunIcon {
    display: block;
    filter: invert(100%); 

  }
  
  &:checked + label #sunIcon {
    display: none;
  }

  &:not(:checked) + label #moonIcon {
    display: none;
  }

  &:checked + label #moonIcon {
    display: block;
  }

  &:checked ~ #container {
    background-color: map-get($colors, "quaternary");
    color: map-get($colors, "secondary");
  }
}

label[for="themeToggle"] {
  position: fixed;
  top: 20px;
  left: 20px;
  cursor: pointer;
  z-index: 1000;

  img {
    width: 2em;
    height: 2em;
  }
}

